# Muggle_Toy

./: .gitignore  CMakeLists.txt  consistent_res.bat  consistent_res.py  consistent_res.sh  readme.md  sync_dir.bat  sync_dir.py  sync_dir.sh
cmake/: FindDirectX.cmake
learn/: CMakeLists.txt
learn/D3D11/: CMakeLists.txt
learn/D3D11/d3d11_hello/: hello.cpp  hello.h  main.cpp
learn/OpenGL/: CMakeLists.txt
learn/OpenGL/opengl_ads/: ads.cpp  ads.h  main.cpp
learn/OpenGL/opengl_basic/: basic.cpp  basic.h  main.cpp
learn/OpenGL/opengl_cube_map/: main.cpp  opengl_cube_map.cpp  opengl_cube_map.h
learn/OpenGL/opengl_diffuse_per_vertex/: diffuse_per_vert.cpp  diffuse_per_vert.h  main.cpp
learn/OpenGL/opengl_discard/: discard.cpp  discard.h  main.cpp
learn/OpenGL/opengl_fade_cycle/: fade_cycle.cpp  fade_cycle.h  main.cpp
learn/OpenGL/opengl_fog/: main.cpp  opengl_fog.cpp  opengl_fog.h
learn/OpenGL/opengl_hello/: hello.cpp  hello.h  main.cpp
learn/OpenGL/opengl_lambert/: lambert.cpp  lambert.h  main.cpp
learn/OpenGL/opengl_light/: main.cpp  opengl_light.cpp  opengl_light.h
learn/OpenGL/opengl_multiple_light/: main.cpp  multiple_light.cpp  multiple_light.h
learn/OpenGL/opengl_multiple_texture/: main.cpp  opengl_multiple_texture.cpp  opengl_multiple_texture.h
learn/OpenGL/opengl_normal_map/: main.cpp  opengl_normal_map.cpp  opengl_normal_map.h
learn/OpenGL/opengl_phong/: main.cpp  phong.cpp  phong.h
learn/OpenGL/opengl_reflection_refraction/: main.cpp  opengl_reflection_refraction.cpp  opengl_reflection_refraction.h
learn/OpenGL/opengl_simple/: main.cpp  simple.cpp  simple.h
learn/OpenGL/opengl_subroutine/: main.cpp  subroutine.cpp  subroutine.h
learn/OpenGL/opengl_test/: main.cpp  opengl_test.cpp  opengl_test.h
learn/OpenGL/opengl_texture/: main.cpp  opengl_texture.cpp  opengl_texture.h
learn/OpenGL/opengl_toon/: main.cpp  opengl_toon.cpp  opengl_toon.h
learn/OpenGL/opengl_two_side/: main.cpp  two_side.cpp  two_side.h
learn/OpenGL/res_learn_opengl/shaders/: BlinnPhong_Phong_frag.glsl  BlinnPhong_Phong_vert.glsl  Lambert_Gouraud_frag.glsl  Lambert_Gouraud_vert.glsl  Phong_Gouraud_frag.glsl  Phong_Gouraud_vert.glsl  Phong_Phong_frag.glsl  Phong_Phong_vert.glsl  Toon_frag.glsl  Toon_vert.glsl  basic_frag.glsl  basic_vert.glsl  cube_map_frag.glsl  cube_map_pixel_frag.glsl  cube_map_pixel_vert.glsl  cube_map_vert.glsl  diffuse_per_vertex_vert.glsl  discard_frag.glsl  discard_vert.glsl  fade_cycle_frag.glsl  fade_cycle_vert.glsl  fog_frag.glsl  gl_test_frag.glsl  gl_test_vert.glsl  lambert_frag.glsl  lambert_vert.glsl  light_frag.glsl  light_vert.glsl  multiple_light_frag.glsl  multiple_light_vert.glsl  multiple_texture_frag.glsl  normal_map_frag.glsl  normal_map_vert.glsl  phong_flat_frag.glsl  phong_flat_vert.glsl  phong_vert.glsl  reflection_and_refraction_frag.glsl  simple_frag.glsl  simple_vert.glsl  subroutine_frag.glsl  (+3 more)
sample/: CMakeLists.txt
sample/hello/: hello.cpp  hello.h  main.cpp
src/: CMakeLists.txt
src/application/: CMakeLists.txt  application.cpp  application.h  camera.cpp  camera.h  entry.cpp  input.cpp  input.h  mesh.cpp  mesh.h  window.h
src/application/unix/: window_unix.cpp
src/application/windows/: window_win.cpp
src/base/: CMakeLists.txt  base.c  base.h  base_all.h  dll.c  dll.h  file_utility.c  file_utility.h  memory_pool.c  memory_pool.h  str_convert.c  str_convert.h  str_utils.c  str_utils.h  string_convert.c  string_convert.h
src/dependencies/: CMakeLists.txt
src/dependencies/glad/include/glad/: glad.h
src/dependencies/glad/src/: glad.c
src/dependencies/lpng/: CMakeLists.txt
src/dependencies/zlib/: CMakeLists.txt
src/image/: CMakeLists.txt  image.cpp  image.h  image_manager.cpp  image_manager.h  image_utils_png.cpp  image_utils_png.h  image_utils_rgbe.cpp  image_utils_rgbe.h
src/math/: math_base.h  math_utility.h  matrix3x3.h  matrix4x4.h  muggle_math.h  quaternion.h  vector2.h  vector3.h  vector4.h
src/render/: CMakeLists.txt  render_info.cpp  render_info.h  renderer.cpp  renderer.h  renderer_d3d11.cpp  renderer_d3d11.h  renderer_opengl.cpp  renderer_opengl.h  shader_obj.cpp  shader_obj.h  shader_program.cpp  shader_program.h  shader_program_glsl.cpp  shader_program_glsl.h  texture.cpp  texture.h
src/utility/: CMakeLists.txt  error_code.h  math_utils.cpp  math_utils.h  ply.c  ply.h  scope_time.cpp  scope_time.h  string_utils.cpp  string_utils.h  timer.cpp  timer.h
